--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
 		
 		<div class="row mt centered">
 			<div class="col-lg-7 col-lg-offset-1 mt">
-					<p class="lead">Lore</p>
+					<p class="lead">Contact Us</p>
 			</div>
 			
 			<div class="col-lg-3 mt">
-				<p><button type="button" class="btn btn-theme btn-lg">Email Me!</button></p>
+				<p><button type="button" class="btn btn-theme btn-lg">Email IDs</button></p>
 			</div>
 		</div>
 	</div>
@@ -242,7 +242,7 @@
 	<div id="f" >
 		<div class="container">
 			<div class="row">
-				<p>Hosted on <i class="fa fa-github"></i></p>
+				<p>Hosted on  <i class="fa fa-github"></i></p>
 			</div>
 		</div>
 	</div>
