Changed to uploading soon

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 				<a href="assets/pdf/soon.pdf"><img src="assets/img/01.jpg" alt=""></a>
 			</div>
 			<div class="col-lg-4">
-				<a href="assets/pdf/Pseudocode for Entire Algorithm.pdf"><img src="assets/img/02.jpg" alt=""></a>
+				<a href="assets/pdf/soon.pdf"><img src="assets/img/02.jpg" alt=""></a>
 			</div>
 			<div class="col-lg-4">
-				<a href="algorithm/keyword_finder_publishing.html"><img src="assets/img/03.jpg" alt=""></a>
+				<a href="assets/pdf/soon.pdf"><img src="assets/img/03.jpg" alt=""></a>
 			</div>
 		</div>
 		
@@ -189,7 +189,7 @@
 				<a href="assets/pdf/soon.pdf"><img src="assets/img/04.jpg" alt=""></a>
 			</div>
 			<div class="col-lg-4">
-				<a href="assets/pdf/flowchart.pdf"><img src="assets/img/05.jpg" alt=""></a>
+				<a href="assets/pdf/soon.pdf"><img src="assets/img/05.jpg" alt=""></a>
 			</div>
 			<div class="col-lg-4">
 				<a href="supplements.html"><img src="assets/img/06.jpg" alt=""></a>
