--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Website for Kaustubh Shivdikar, Hosted by KTB Tech-->
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
